Added Navigation Bar - Set up main pages of website with background - Implemented Navbar across all pages that require it - Added in on-hover animations for all links and buttons on navbar - set up page routing for links on navigation bar - imported more icons and photos along with LOGO

--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
     <link rel="stylesheet" href="/styles/general-styles.css">
 </head>
 <body>
-    
+    <header id="header"></header>
+    <script>
+        fetch('/includes/navigation-bar.html')
+            .then(response => response.text())
+            .then(html => {
+                document.getElementById('header').innerHTML = html;
+                
+            });
+    </script>
+    <script src="js/state.js"></script> <!--Handles active state of elements-->
 </body>
 </html>
