--- a/index.html
+++ b/index.html
@@ -8,14 +8,8 @@
 </head>
 <body>
     <header id="header"></header>
-    <script>
-        fetch('/includes/navigation-bar.html')
-            .then(response => response.text())
-            .then(html => {
-                document.getElementById('header').innerHTML = html;
-                
-            });
-    </script>
+    <footer id="footer"></footer>
     <script src="js/state.js"></script> <!--Handles active state of elements-->
+    <script src="js/includes.js"></script> <!--Reusable HTML & CSS elements-->
 </body>
 </html>
