Set up about-us page - imported illustration and images for about us page - added parallax effect on about us page elements - fixed ordering page mobile responsivity - made home page mobile responsive - made footer mobile responsive - made recipe page mobile responive

--- a/pages/order/order-page.html
+++ b/pages/order/order-page.html
@@ -13,7 +13,7 @@
     
 <div class="container">
     
-    <div id="page1" class="page1 page active">
+    <div class="start-order">
         <h1>Create <br>Your Plan</h1>
         <p class="create-plan-desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Tincidunt ornare massa eget egestas purus viverra accumsan in.</p>
         <a class="next-btn" href="/pages/order/steps.html">
