Set up recipe book pages - created swipeable interactive sections for the recipe - implemented an update function to load the proper recipe - Partially completed the shopping cart overlay - improved the parallax animation on the about us page, improved mobile adaptability

--- a/pages/about-us-page.html
+++ b/pages/about-us-page.html
@@ -14,6 +14,7 @@
         <img class="noodle-bowl speed2" src="/Assets/parallax/about-us/noodle-bowl.png">
         <img class="taco-plate speed1" src="/Assets/parallax/about-us/taco-plate.png">
         <img class="states speed1" src="/Assets/parallax/about-us/states.png">
+        <img class="tomato speed4" src="/Assets/parallax/about-us/tomato.svg">
     </div>
 
     <div class="about-us-content">
@@ -61,6 +62,6 @@
 
 <footer id="footer"></footer>
     <script src="/js/state.js"></script> <!--Handles active state of elements-->
-    <script src="/js/includes.js"></script> <!--Reusable HTML & CSS elements-->
+    <script type="module" src="/js/includes.js"></script> <!--Reusable HTML & CSS elements-->
     <script src="/js/parallax.js"></script> <!--Parallax-->
 </html>
