--- a/pages/order/steps.html
+++ b/pages/order/steps.html
@@ -166,7 +166,7 @@
 
 
 
-    <script src="/js/cart.js"></script>
+    <script type="module" src="/js/cart.js"></script>
     <script src="/js/state.js"></script> <!--Handles active state of elements-->
 </body>
 </html>
