--- a/index.html
+++ b/index.html
@@ -158,6 +158,7 @@
 </body>
 <footer id="footer"></footer>
     <script src="js/state.js"></script> <!--Handles active state of elements-->
-    <script src="js/includes.js"></script> <!--Reusable HTML & CSS elements-->
+    <script  type="module" src="js/includes.js"></script> <!--Reusable HTML & CSS elements-->
+    <script  type="module" src="js/shopping-cart.js"></script> <!--Reusable HTML & CSS elements-->
     <script src="js/parallax.js"></script> <!--Reusable HTML & CSS elements-->
 </html>
