--- a/pages/order/checkout.html
+++ b/pages/order/checkout.html
@@ -167,5 +167,5 @@
 </body>
     
     <script src="/js/state.js"></script> <!--Handles active state of elements-->
-    <script src="/js/checkout.js"></script>
+    <script type="module" src="/js/checkout.js"></script>
 </html>
