--- a/pages/recipes/browse-recipe-page.html
+++ b/pages/recipes/browse-recipe-page.html
@@ -38,5 +38,5 @@
 </body>
 <footer id="footer"></footer>    
     <script src="/js/state.js"></script> <!--Handles active state of elements-->
-    <script src="/js/includes.js"></script> <!--Reusable HTML & CSS elements-->
+    <script type="module" src="/js/includes.js"></script> <!--Reusable HTML & CSS elements-->
 </html>
