--- a/pages/shopping-cart/shopping-cart-page.html
+++ b/pages/shopping-cart/shopping-cart-page.html
@@ -66,6 +66,6 @@
 
     <script src="/js/cart.js"></script>
     <script src="/js/state.js"></script> <!--Handles active state of elements-->
-    <script src="/js/includes.js"></script> <!--Reusable HTML & CSS elements-->
+    <script type="module" src="/js/includes.js"></script> <!--Reusable HTML & CSS elements-->
 </body>
 </html>
