--- a/pages/order/steps.html
+++ b/pages/order/steps.html
@@ -37,7 +37,7 @@
                         <label for="radio1">1</label>
                     </div>
                     <div class="radio-option">
-                        <input type="radio" id="radio2" name="serving-size" value="2">
+                        <input type="radio" id="radio2" name="serving-size" value="2" checked>
                         <label for="radio2">2</label>
                     </div>
                     <div class="radio-option">
@@ -85,7 +85,7 @@
                         <label for="radio5">2</label>
                     </div>
                     <div class="radio-option">
-                        <input type="radio" id="radio6" name="meal-quantity" value="3">
+                        <input type="radio" id="radio6" name="meal-quantity" value="3" checked>
                         <label for="radio6">3</label>
                     </div>
                     <div class="radio-option">
